# yolo_dataset_redactor

./: License.md  README.md  file_classes.py  markup_editor.py  pyproject.toml  resizer.py  video_spliter.py
src/yolo_dataset_redactor/: __init__.py  resizer.py
src/yolo_dataset_redactor.egg-info/: PKG-INFO  SOURCES.txt
src/yolo_dataset_redactor/base/: __init__.py  file_editor.py  file_finder.py
src/yolo_dataset_redactor/image/: __init__.py  base.py  image.py  images.py
src/yolo_dataset_redactor/label/: __init__.py  base.py  label.py  labels.py
src/yolo_dataset_redactor/spliterators/: __init__.py  base.py  spliterator.py  spliterators.py
src/yolo_dataset_redactor/video/: __init__.py  base.py  video.py  videos.py
