[project]
dependencies = ["opencv-python>=4.10"]
name = "yolo_dataset_redactor"
version = "0.2.1"
authors = [
 { name="lexter0705", email="lexter0705@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]