[project]
dependencies = ["opencv-python>=4.10"]
name = "yolo_dataset_redactor"
version = "0.2.2"
authors = [
 { name="lexter0705", email="lexter0705@gmail.com" },
]
description = 'Library for work with images (yolo) datasets'
readme = "README.md"
requires-python = ">=3.12.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    "Topic :: Scientific/Engineering"
]
[project.urls]
repository = 'https://github.com/lexter0705/yolo_dataset_redactor'